--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9be1699c-d225-4e9f-8d96-a29b45ac99e6"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
